# nce_cd_cis

./: .gitignore  :wq  LICENSE  Pipfile  README.md  bsds_exp_cis.txt  bsds_exp_csmc.txt  cis_mb.txt  csmc_mb.txt  gas_exp_cis.txt  gas_exp_csmc.txt  gas_exp_is.txt  gas_exp_mm_cis.txt  gas_exp_mm_csmc.txt  gas_exp_mm_is.txt  hepmass_exp_cis.txt  hepmass_exp_csmc.txt  hepmass_exp_is.txt  hepmass_exp_mm_cis.txt  hepmass_exp_mm_csmc.txt  hepmass_exp_mm_is.txt  is_mb.txt  min_max.txt  miniboone_exp_cis.txt  miniboone_exp_csmc.txt  miniboone_exp_is.txt  miniboone_exp_mm_cis.txt  miniboone_exp_mm_csmc.txt  miniboone_exp_mm_is.txt  power_exp_cis.txt  power_exp_csmc.txt  power_exp_is.txt  power_exp_mm_cis.txt  power_exp_mm_csmc.txt  power_exp_mm_is.txt  pyproject.toml  smc_test.t  smc_test.txt  te  test.txt  (+2 more)
experiments/: acceptance_probability.py  adaptive_proposal.py  aem.py  aem_eval_all_crit.py  aem_eval_all_crit_wasser.py  aem_eval_log_likelihood.py  aem_eval_wasser.py  aem_eval_wasserstein.py  aem_experiment.py  cnce_acceptance_prob_exp.ipynb  optimal_noise_distr.ipynb
mm/: bregman_derivation.nb
nbs/: Untitled.ipynb  ace_experiment.py  adaptive_proposal.py  aem_eval_all_crit.py  aem_eval_all_crit_nco.py  aem_eval_all_crit_sep_training.py  aem_eval_all_crit_sep_training_minmax.py  aem_eval_all_crit_sep_training_truncated.py  aem_eval_all_crit_wasser.py  aem_eval_all_crit_wasser_pytorch.py  aem_eval_log_z_no_context_opt.py  aem_eval_log_z_st.py  aem_eval_q.py  aem_eval_q_no_context_opt.py  aem_eval_q_p.py  aem_eval_q_p_st.py  aem_eval_q_p_st_mm.py  aem_eval_q_st.py  (+27 more)
(+168 files in other folders)
