[tool.poetry]
name = "deep_ext_obj"
version = "0.1.0"
description = "Deep extended object modelling"
authors = ["Jakob Lindqvist <jakob.lindqvist@chalmers.se>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "*"
numpy = "*"
scipy = "*"
wandb = "*"
sklearn = "*"
matplotlib = "*"
jupyter = "*"
ipython = "^8.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "*"
black = "*"
neovim = "^0.3.1"
rope = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
